manifests/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-82240947
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: 82240947
  type: ClusterIP
